# bevy_register_in_world

./: .gitignore  Cargo.toml  README.md
macros/: Cargo.toml
macros/src/: lib.rs
src/: add_systems.rs  app.rs  component.rs  lib.rs  system_param.rs
